Fix extra padding for uoft

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -391,6 +391,8 @@ footer {
             :hover {
                 text-decoration: underline;
             }
+            margin: 0px;
+            padding: 0px;
         }
         margin-bottom: 15px;
         font-size: 1.4em;
